[package]
name = "algorithm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
proconio = "0.5.0"
strum = { version = "0.26.3", features = ["derive"] }
